forgot to add updated html file

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       <div class="container">
         <button type="button" id="addRow" class="btn btn-secondary">Add Row</button>
         <button type="button" id="addCol" class="btn btn-secondary">Add Column</button>
-
+        <button type="button" id="removeRow" class="btn btn-secondary">Remove Row</button>
+        <button type="button" id="removeCol" class="btn btn-secondary">Remove Column</button>
       </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
