first comment on changing colors

--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
         <button type="button" id="addCol" class="btn btn-secondary">Add Column</button>
         <button type="button" id="removeRow" class="btn btn-secondary">Remove Row</button>
         <button type="button" id="removeCol" class="btn btn-secondary">Remove Column</button>
+        <form class="p-2">
+          <label for="cars">Pick a Color:</label>
+            <select name="colors" id="colors">
+              <option value=""></option>
+              <option value="red">Red</option>
+              <option value="green">Green</option>
+              <option value="blue">Blue</option>
+              <option value="orange">Orange</option>
+            </select>
+        </form>
       </div>
    
     <!-- Option 1: Bootstrap Bundle with Popper -->
