--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <button type="button" id="removeCol" class="btn btn-secondary">Remove Column</button>
         <form class="p-2">
           <label for="cars">Pick a Color:</label>
-            <select name="colors" id="colors">
+            <select onchange="changeColor(this)" name="colors" id="colors">
               <option value=""></option>
-              <option value="red">Red</option>
-              <option value="green">Green</option>
-              <option value="blue">Blue</option>
-              <option value="orange">Orange</option>
+              <option id="red" value="red">Red</option>
+              <option id="green" value="green">Green</option>
+              <option id="blue" value="blue">Blue</option>
+              <option id="orange" value="orange">Orange</option>
             </select>
         </form>
       </div>
