added reset button

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
               <option id="orange" value="orange">Orange</option>
             </select>
         </form>
+        <button type="button" id="reset" class="btn btn-secondary">Reset Color</button>
       </div>
    
     <!-- Option 1: Bootstrap Bundle with Popper -->
