--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
                   <tr>
                       <td></td>  <!-- columns  -->   
                       <td></td>
-                  </tr>
+                  </tr><tr>
+                    <td></td>  <!-- columns  -->   
+                    <td></td>
+                </tr><tr>
+                  <td></td>  <!-- columns  -->   
+                  <td></td>
+              </tr><tr>
+                <td></td>  <!-- columns  -->   
+                <td></td>
+            </tr>
                 </tbody>
           </table>
       </div>
