fixed issues with delete color function and other minor fixes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Assignment - 5</h1>
           <div class="container border my-5">
                 <table class="table table-bordered border-dark my-2 ">  
                   <tbody id="tbody">
@@ -47,7 +47,7 @@
         <form class="p-2">
           <h5>Change All Cell Colors</h5>
           <label for="cars">Pick a Color:</label>
-            <select onchange="changeColor(this)" name="colors" id="colors">
+            <select name="colors" id="colors">
               <option value=""></option>
               <option id="red" value="red">Red</option>
               <option id="green" value="green">Green</option>
@@ -58,7 +58,7 @@
         <form class="p-2">
           <h5>Select a color then drag on cell to change</h5>
           <label for="cars">Pick a Color:</label>
-            <select onchange="changeColor(this)" name="colors" id="colors2">
+            <select name="colors" id="colors2">
               <option value=""></option>
               <option id="red2" value="red">Red</option>
               <option id="green2" value="green">Green</option>
